--- a/dv_fp-notes.Rmd
+++ b/dv_fp-notes.Rmd
@@ -40,9 +40,24 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### final project outline
 
+[ ] use R markdown html output for final report
+[ ] focus on DV principles
+[ ] if time, consider representing conditions with Venn diagram
+
+
+* when to show the distribution
+* distributions and mean differences
+* the role of time
+* time and mean differences
+
+
+
 ### dataset encodings for final project
 
 ```{r level 1 dataset encoding}
+
+study_01 <- readr::read_csv("~/R/CGChains/data/CGChains_CODED-ELAN-DATA_2018-04-24.csv")
+
 # no interaction terms
 level_01_data <- study_01 %>%
 
@@ -88,12 +103,264 @@ level_01_data <- study_01 %>%
   mutate(ACCURACY_DV = if_else(study_01$ACCURACY == 1, 1, 0)) %>%
   
 # SELECT VARIABLES
-  
-  select(ITEM, LIST, TRIAL, ID, 
+
+  dplyr::select(ITEM, LIST, TRIAL, ID, 
          SPACE_IV, AXIS_IV, DIFF_IV, 
          ORDER, # deSoto_difficulty_IV2, 
          GESTURE_DV, AXIS_DV, ACCURACY_DV)
 ```
 
+```{r gesture & accuracy by subject}
+# calculate gesture and accuracy proportions by subject
+X <- level_01_data %>%
+  #dplyr::select(SUBJ, GESTURE_DV, ACCURACY_DV) %>%
 
+  dplyr::group_by(ID, SPACE_IV) %>%
+  dplyr::summarize(gestures = sum(GESTURE_DV), 
+                   percent_gestured = gestures / (length(unique(ITEM))*2),
+                   gesture_se = sd(GESTURE_DV)/sqrt((length(unique(ITEM)))*2),
+                   
+                   errors = length(unique(ITEM)) - sum(ACCURACY_DV),
+                   percent_errors = errors / (length(unique(ITEM))*2),
+                   error_se = sd(1 - ACCURACY_DV)/sqrt((length(unique(ITEM)))*2)
+                   ) %>%
+
+  as_factor(ID) #%>%
+  
+#    dplyr::arrange(ID) %>%
+    # add variable to relabel x axis sequentially
+ #  dplyr::mutate(ID_gestures_ascending = as.integer(seq(1:length(unique(study_01$SUBJ))))) #%>%
+
+
+ 
+  # order by proportion
+  dplyr::arrange(percent_gestured) #%>%
+  # add se variables for gesture production and error
+  dplyr::mutate(percent_gestured = gestures / length(unique(study_01$ITEM_CODE)),
+                percent_errors = errors / length(unique(study_01$ITEM_CODE))) %>%
+  
+  
+  
+ 
+
+  
+  dplyr::arrange(percent_errors) %>%
+  
+  dplyr::mutate(ID_errors_ascending = as.integer(seq(1:length(unique(study_01$SUBJ))))) %>%
+  # could not get color to work without adding a constant
+  dplyr::mutate(fill_constant = 1)
+
+
+summary_subj_err_gest <- mean_subject_errors_gestures %>%
+  dplyr::summarize(mean_gestures = mean(gestures), 
+                   mean_percent_gestured = mean(percent_gestured),
+                   mean_gesture_se = mean(gesture_se),
+                   
+                   mean_errors = mean(errors),
+                   mean_percent_errors = mean(percent_errors),
+                   mean_error_se = mean(error_se))
+```
+
+
+### sketches for final project
+
+#### boxplots
+
+```{r box plot}
+
+
+
+```
+
+
+#### distributions
+
+##### static histogram
+
+To begin, I used ggplotly to add interactive plotly labels to some pretty extensively formatted ggplot objects.
+
+Gesture production (i.e., whether a participant gestured on a given problem) is an important response variable in my data. A distribution of this variable may be displayed as a histogram showing the proportion of trials on which each participant gestured:
+
+```{r gesture production by participant, include = FALSE}
+
+# COLORS: using potion brewer color palette from color-hex.com
+
+mean_subject_errors_gestures %>%
+  
+  ggplot() +
+  
+  geom_col(aes(x = ID_gestures_ascending, y = percent_gestured, #group = SUBJ, 
+                 fill = as.factor(fill_constant), alpha = .75)) +
+  
+    # change color scheme of fill colors
+    scale_fill_manual("fill_constant", values ="#a2adba") +
+  
+    # add horizontal line showing mean
+    geom_hline(aes(yintercept = mean(percent_gestured)), color = "#919ba7") +
+  
+    # add label with mean value
+    geom_text(x = 4, y = 0.56, aes(label = "mean = 0.524"), color = "#919ba7") +
+  
+    scale_y_continuous(expand = c(0, 0)) +
+    scale_x_continuous(breaks = c(seq(1:24)), expand = c(0, 0)) +
+  
+    theme_light() +
+    theme(panel.grid.major.x = element_blank(), # remove vertical grid lines
+        panel.grid.minor.x = element_blank(), # remove vertical grid lines
+        panel.grid.minor.y = element_blank(), # remove minor horizontal grid lines
+        legend.position = "none", # remove legends
+        panel.border = element_blank(), # remove outer panel border
+        axis.ticks.y = element_blank(), # remove ticks from y axis
+        plot.title = element_text(margin = margin(t = 0, r = 0, b = 30, l = 0)),
+        axis.title.y = element_text(margin = margin(t = 0, r = 15, b = 0, l = 0)), 
+        axis.title.x = element_text(margin = margin(t = 15, r = 0, b = 0, l = 0)), 
+        text = element_text(family = "Arial")) +
+  
+    ggtitle('participant gesture production') +
+    xlab('participant (arranged by ascending gesture production)') +
+    ylab('proportion of trials with gesture')
+```
+
+
+
+
+
+
+DESIGN CHOICES
+
+* removed y tick marks
+
+
+##### interactive histogram
+
+
+
+```{r distribution of gesture production}
+
+'total mean =' <- round(mean(X$percent_gestured)*2, digits = 3)
+
+
+dist_gest <- X %>%
+  
+  ggplot() +
+    
+  # mean gesture production line
+#  geom_hline(aes(yintercept = mean(percent_gestured)*2), color = "#2e184b", size = 0.3) +
+  
+      geom_hline(aes(yintercept = mean(percent_gestured)*2, 'total mean' = 0.524), 
+              color = "#2e184b", size = 0.3) +
+
+## OLD VERSION  
+##    geom_hline(aes(yintercept = mean(percent_gestured)*2, 'total mean' = paste("total mean", mean(percent_gestured)*2)), 
+##                 color = "#2e184b", size = 0.3) +
+  
+  # label mean line
+##  geom_text(x = 3, y = (mean(X$percent_gestured)*2 + 0.03), 
+##            aes(label = "total mean = "), color = "#2e184b") +
+##  
+##  geom_text(x = 6, y = (mean(X$percent_gestured)*2 + 0.03), 
+##            aes(label = round(mean(percent_gestured)*2, digits = 3)), color = "#2e184b") +
+  
+  ### REFERENCE
+    
+   #     geom_text(aes(label = sprintf("%0.2f", round(prop_gesture, digits = 2)), 
+    #                y = prop_gesture + 0.1,
+     #               group = item_axis,
+      #              fontface = "bold"), 
+       #             position = position_dodge(0.55),
+        #            color = "#767676") +
+  
+### group means... cluncky code: there must be a simpler way!
+  
+  # spatial mean line
+  geom_hline(aes(yintercept = 
+      (sum(X[X$SPACE_IV == 1, "percent_gestured"]) / 
+      tally(X[X$SPACE_IV == 1, "percent_gestured"]))[1,1], 'spatial mean' = "X"),
+      color = "#5bae94") +
+  
+  # spatial mean labels  
+  geom_text(x = 3, 
+            y = (sum(X[X$SPACE_IV == 1, "percent_gestured"]) / 
+              tally(X[X$SPACE_IV == 1, "percent_gestured"])[1,1] + 0.03)[1,1], 
+            aes(label = "spatial mean = "), color = "#5bae94") +
+  
+  geom_text(x = 7, 
+            y = (sum(X[X$SPACE_IV == 1, "percent_gestured"]) / 
+              tally(X[X$SPACE_IV == 1, "percent_gestured"])[1,1] + 0.03)[1,1], 
+            
+            aes(label = round((sum(X[X$SPACE_IV == 1, "percent_gestured"]) / 
+      tally(X[X$SPACE_IV == 1, "percent_gestured"]))[1,1], digits = 3)), color = "#5bae94") +
+  
+  # non-spatial mean labels  
+  geom_text(x = 3.5, 
+            y = (sum(X[X$SPACE_IV == 0, "percent_gestured"]) / 
+              tally(X[X$SPACE_IV == 0, "percent_gestured"])[1,1] + 0.03)[1,1], 
+            aes(label = "non-spatial mean = "), color = "#5bae94") +
+  
+  geom_text(x = 7.5, 
+            y = (sum(X[X$SPACE_IV == 0, "percent_gestured"]) / 
+              tally(X[X$SPACE_IV == 0, "percent_gestured"])[1,1] + 0.03)[1,1], 
+            
+            aes(label = round((sum(X[X$SPACE_IV == 0, "percent_gestured"]) / 
+      tally(X[X$SPACE_IV == 0, "percent_gestured"]))[1,1], digits = 3)), color = "#5bae94") +
+  
+  
+#  geom_text(x = 6, y = 0.554, aes(label = round(mean(percent_gestured)*2, digits = 3)), 
+#                                  color = "#2e184b") +
+  
+    # non-spatial mean
+  geom_hline(aes(yintercept = 
+      (sum(X[X$SPACE_IV == 0, "percent_gestured"]) / 
+      tally(X[X$SPACE_IV == 0, "percent_gestured"]))[1,1]), color = "#7e90b6") +
+  
+#  geom_hline(aes(yintercept = mean((X[X$SPACE_IV == 0, "percent_gestured"])[,])), color = "#FFA319") +
+#  geom_hline(aes(yintercept = mean((X[X$SPACE_IV == 1, "percent_gestured"])[,])), color = "#FFA319") +
+  
+
+### temporarily remove ribbon (need to fix error margin)
+ #   annotate('ribbon', x = c(-Inf, Inf), 
+  #           ymin = summary_subj_err_gest$mean_percent_gestured - summary_subj_err_gest$mean_gesture_se, 
+   #          ymax = summary_subj_err_gest$mean_percent_gestured + summary_subj_err_gest$mean_gesture_se, 
+    #         alpha = 0.2, fill = "#628B9F") +
+  
+  geom_col(aes(x = reorder(ID, percent_gestured), y = percent_gestured, #group = SUBJ, 
+                 fill = as.factor(SPACE_IV), alpha = .85)) +
+  
+
+  
+   # scale_y_continuous(expand = c(0, 0)) +
+   # scale_x_continuous(breaks = c(seq(1:24)), expand = c(0, 0)) +
+  
+    # change color scheme of fill colors
+    scale_fill_manual("fill_constant", values = c("#8da0cb", "#66c2a5")) +
+  
+  scale_y_continuous(expand = c(0, 0)) +
+   # scale_x_continuous(breaks = c(seq(1:24)), expand = c(0, 0)) +
+  
+    theme_light() +
+    theme(panel.grid.major.x = element_blank(), # remove vertical grid lines
+        panel.grid.minor.x = element_blank(), # remove vertical grid lines
+        panel.grid.minor.y = element_blank(), # remove minor horizontal grid lines
+        # remove legends (unnecessary here)
+        legend.position = "right", ### TEMP
+        plot.title = element_text(margin = margin(t = 0, r = 0, b = 10, l = 0)),
+        axis.title.y = element_text(margin = margin(t = 0, r = 15, b = 0, l = 0)), 
+        axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)), 
+        panel.border = element_blank(), # remove outer panel border
+        axis.ticks.y = element_blank(), # remove ticks from y axis
+        text = element_text(family = "Arial")) +
+  
+    ggtitle('gesture production by participant') +
+    xlab('participant id (arranged by total gesture production)') +
+    ylab('proportion of trials with gesture')
+
+dist_gest
+
+ggplotly(dist_gest, tooltip = c("total mean", "spatial mean", "all"))
+
+
+
+
+ggsave("gesture_production_dist.png", width = 5.3125, height = 3.270833)
+```
 
